--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>  
     <h2>Ingresar Prodcuto</h2>
-    <form action="api/prodcutos" method="post">
-        <input type="text" name="title" id="title" placeholder="Titulo" required>
-        <input type="number" name="price" id="price" placeholder="0.00" required>
-        <input type="url" name="thumbnail" id="thumbnail" placeholder="https://cdn3.iconfinder.com/data/icons/education-209/64/calculator-math-tool-school-256.png" required>
+    <form action="../api/productos" method="post">
+        <input type="text" name="title" placeholder="Titulo" required>
+        <input type="number" name="price" placeholder="0.00" required>
+        <input type="url" name="thumbnail" placeholder="https://cdn3.iconfinder.com/data/icons/education-209/64/calculator-math-tool-school-256.png" required>
         <input type="submit" value="Agregar">
-    </form>
+    </form>    
 </body>
 </html>
