--- a/desafios/src/public/index.html
+++ b/desafios/src/public/index.html
@@ -12,7 +12,7 @@
 <body>
   <form id="product-form" class="product-form">
     <input type="text" name="title" placeholder="Título" required>
-    <input type="number" name="price" placeholder="0.00" required>
+    <input type="number" name="price" step="0.01" placeholder="0.00" required>
     <input type="url" name="thumbnail" placeholder="Imagen URL" required>
     <button type="submit">Enviar</button>
   </form>
