--- a/desafios/public/index.html
+++ b/desafios/public/index.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
-    <title>Desafio 13 - Inicio de sesión</title>
+    <title>Desafios</title>
 </head>
 
 <body>
-    <h1>Desafio 14</h1>
-   
-    
+    <h1>Desafios</h1>
+    {{}}
+    <button id="getProductsBtn">Ver Productos</button>
+
+    <div id="productsContainer"></div>
 
     <script type="module" src="js/index.js"></script>
 </body>
